# repro-llm-stack

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/eval/: lm_eval_tasks.txt
configs/train/: llamafactory_qwen25_7b_lora_cpt_smoke.yaml  llamafactory_qwen25_7b_lora_dpo.yaml  llamafactory_qwen25_7b_lora_sft.yaml
docker/: Dockerfile
docs/: ABLATION_REGISTRY.md  BENCHMARK_RETRIEVAL_BEIR.md  CI_AND_HARNESS.md  CPT_AND_PRETRAIN.md  MEASURED_FINDINGS.md  MODEL_OUTCOMES.md  PREFERENCE_AND_DATA.md  RAG_RETRIEVAL_BENCHMARK.md  REPRO.md  RESEARCH.md  RESULTS.md
docs/metrics/: data_plane_snapshot.json
experiments/: registry.yaml
recipes/: cpt_smoke.yaml  default.yaml
results/eval_runs/: README.md
scripts/data/: prepare.sh  prepare_cpt_smoke.sh  quality_report.sh
scripts/eval/: beir_retrieval.sh  benchmarks.sh
scripts/serve/: vllm.sh
scripts/train/: cpt.sh  dpo.sh  sft.sh
tools/: __init__.py  beir_retrieval_compare.py  compare_eval_runs.py  data_quality_report.py  dry_run.py  experiments_render.py  plot_qa_figure.py  prepare_cpt_smoke.py  prepare_data.py  render_measured_findings.py  summarize_lm_eval.py  synth_preference_demo.py
