[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repro-llm-stack"
version = "0.2.2"
description = "Reproducible ~7B LM stack: data, train, eval, serve"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "You" }]
dependencies = [
  "pyyaml>=6.0.1",
]

[project.scripts]
repro-prepare-data = "tools.prepare_data:cli"
repro-prepare-cpt-smoke = "tools.prepare_cpt_smoke:cli"
repro-dry-run = "tools.dry_run:cli"
repro-summarize-eval = "tools.summarize_lm_eval:cli"
repro-compare-eval = "tools.compare_eval_runs:cli"
repro-data-quality = "tools.data_quality_report:cli"
repro-experiments-render = "tools.experiments_render:cli"
repro-synth-prefs-demo = "tools.synth_preference_demo:cli"
repro-render-findings = "tools.render_measured_findings:cli"
repro-plot-qa-figure = "tools.plot_qa_figure:cli"
repro-beir-retrieval-compare = "tools.beir_retrieval_compare:cli"

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]
data = [
  "datasets>=2.19.0",
  "huggingface_hub>=0.23.0",
]
train = [
  "datasets>=2.19.0",
  "huggingface_hub>=0.23.0",
  "llamafactory>=0.9.0",
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "accelerate>=0.33.0",
]
eval = [
  "lm-eval>=0.4.4",
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "accelerate>=0.33.0",
]
retrieval = [
  "beir>=2.0.0",
  "sentence-transformers>=3.0.0",
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "datasets>=2.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.ruff]
line-length = 100
target-version = "py310"
